--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sandbox": "ampx sandbox --profile=amplify-admin"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.5.5",
-    "aws-amplify": "^6.6.6",
-    "next": "14.2.10",
+    "@aws-amplify/ui-react": "^6.11.2",
+    "@aws-amplify/ui-react-storage": "^3.12.0",
+    "aws-amplify": "^6.15.5",
+    "next": "^15.4.6",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.25.17"
@@ -26,7 +28,6 @@
     "aws-cdk-lib": "^2",
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
-    "sass": "^1.90.0",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
   }
